# photo-potato

./: README.md
photo-potato-backend/: .flaskenv  README.md  pyproject.toml
photo-potato-backend/photo_potato_backend/: app.py  models.py
photo-potato-frontend/: .gitignore  README.md  package-lock.json  package.json
photo-potato-frontend/public/: index.html
photo-potato-frontend/src/: App.js  backend_config.js  index.js
photo-potato-frontend/src/components/: Dashboard.js  Login.js  Navbar.js  SignUp.js  Upload.js
